# asr-finetuning

./: .gitignore  README.md  pyproject.toml  run_training.sh
.cursor/rules/: project-standards.mdc
asr_finetuning/: __init__.py
asr_finetuning/data/: __init__.py  collator.py  config.py  data_module.py  dataset.py
asr_finetuning/model/: __init__.py  config.py  factory.py  factory_unsloth.py
asr_finetuning/model/lora/: __init__.py  inject.py  layer.py  linear.py
asr_finetuning/training/: __init__.py  config.py  module.py  trainer.py  utils.py
asr_finetuning/training/callbacks/: __init__.py  gpu.py
asr_finetuning/training/tracking/: __init__.py  trackio_logger.py
configs/data/: default.yaml  elise.yaml
configs/models/: whisper-large-v3-lora.yaml
configs/training/: whisper-large-v3-lora-elise.yaml  whisper-large-v3-lora.yaml
scripts/: test_unsloth.py  train.py
